--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/build/)
 set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib/)
 
 set(BUILD_EXAMPLES OFF)
+add_definitions(-DQF_DONT_USE_ALIGNED_MALLOC)
 set(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/3rdparty/JKQtPlotter)
 
 set(3RD_PARTY_DIR ${CMAKE_SOURCE_DIR}/3rdparty)
